--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head> </head>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
+  </head>
   <body>
     <div class="display">
       <app-display-chart [dataSource]="weatherData"></app-display-chart>
@@ -18,6 +23,5 @@
       />
       <button type="submit" (click)="onSubmit()">Submit</button>
     </div>
-    <!-- <button (click)="breakLoopMethod()">breakLoopMethod</button> -->
   </body>
 </html>
