--- a/src/app/display-chart/display-chart.component.html
+++ b/src/app/display-chart/display-chart.component.html
@@ -1,7 +1,6 @@
-
-<highcharts-chart 
+<highcharts-chart
   [Highcharts]="Highcharts"
   [options]="chartOptions"
-
+  [(update)]="updateFlag"
   style="width: 100%; height: 400px; display: block;"
 ></highcharts-chart>
